--- a/hello_app/pubspec.yaml
+++ b/hello_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   smooth_star_rating: ^1.1.1
+  scoped_model: ^1.1.0
 
 dev_dependencies:
   flutter_test:
