--- a/hello_app/pubspec.yaml
+++ b/hello_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   smooth_star_rating: ^1.1.1
   scoped_model: ^1.1.0
+  http: ^0.12.0+2
 
 dev_dependencies:
   flutter_test:
